--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,31 @@
 @import "reset.css";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i,800,800i|Vollkorn:400,400i,600,600i,700,700i&display=swap');
+
+.container {
+    padding: 5%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+h1 {
+    font-family: 'Vollkorn', serif;
+    font-weight: 700;
+    font-size: 96px;
+    margin-bottom: 20px;
+}
+
+h3 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+}
+
+a {
+    text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    margin-right: 20px;
+}
