--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 
 .container {
     padding: 5%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -22,10 +23,22 @@ h3 {
     font-size: 22px;
 }
 
+p {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+}
+
 a {
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     font-size: 16px;
     margin-right: 20px;
+}
+
+.header .content {
+    width: 50%;
+    margin-top: 40px;
 }
